@@ -1322,6 +1322,7 @@ print all results to its standard output which will be read by
 Geany. To help finding errors in executing the command, the output
 of the program's standard error will be printed on Geany's standard
 output.</p>
+<p>If there is no selection, the whole current line is used instead.</p>
 <p>To add a custom command, use the <em>Send Selection to-&gt;Set Custom
 Commands</em> menu item. Click on <em>Add</em> to get a new text entry and type
 the command. You can also specify some command line options. To
